--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "framer-motion": "^12.18.1",
     "json-server": "^1.0.0-beta.3",
     "json-server-auth": "^2.1.0",
     "react": "^18.2.0",
