done thanh toan online

--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 VITE_API_BASE_URL=http://localhost:8000/api
 VITE_ASSET_BASE_URL=http://localhost:8000
+
+VITE_GAS_BASE=https://script.google.com/macros/s/AKfycbzGiqat4Y_HyLxGTPBAjs41v8HSZFupzwE5kEIUMkIgT3eMVDXQml_2GqYNFuVvF9lpNA/exec
+VITE_GAS_SECRET=tuanhiepno1
+VITE_GAS_TOLERANCE=1000
